ini ubah file buat bedain dlu

--- a/pages/html/game.html
+++ b/pages/html/game.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/main.js"></script>
-    <title>UMN Gotcha Cendol Barney</title>
+    <title>Idle Clicker Cendol Barney</title>
 </head>
 <body>
-    ganteng
+    ini idle clicker
 </body>
 </html>
