--- a/pages/html/game.html
+++ b/pages/html/game.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import CSS File & Bootstrap-->
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <!--Import Javascript File & Jquery-->
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../js/main.js"></script>
     <title>Idle Clicker Cendol Barney</title>
 </head>
 <body>
-    ini idle clicker
+    <div class="container-fluid">
+        <div class="row bg-primary">
+            <h1 class="text-center mt-5">Idle Clicker</h1>
+           
+        </div>
+        <div class="row bg-secondary">
+            <h1>hello</h1>
+        </div>
+    </div>
 </body>
 </html>
