--- a/pages/html/main-menu.html
+++ b/pages/html/main-menu.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/font.css">
     <!--Import Javascript File & Jquery-->
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/main-menu.js"></script>
     <title>Idle Clicker Cendol Barney</title>
 </head>
 
@@ -23,15 +23,17 @@
         </div>
         <div class="row custom-button-margin">
             <div class="d-flex justify-content-center">
-                <button class="custom-button custom-start-button-font main-menu-font-color">START</button>
+                <button onclick="OpenNewGame()"
+                    class="custom-button custom-start-button-font main-menu-font-color">START</button>
             </div>
             <div class="d-flex justify-content-center mt-3">
-                <button class="custom-button main-menu-font-color">LOAD</button>
+                <button onclick="OpenLoadGame()" class="custom-button main-menu-font-color">LOAD</button>
             </div>
             <div class="d-flex justify-content-center mt-3">
-                <button class="custom-button main-menu-font-color">CREDIT</button>
+                <button onclick="OpenCredit()" class="custom-button main-menu-font-color">CREDIT</button>
             </div>
         </div>
+
 
     </div>
 </body>
