benerin beberapa animasi dan gambar

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -23,14 +23,15 @@
                 <h1 id="money" class="text-center text-light">0</h1>
             </div>
             <div id="monster">
-                <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idle.gif" alt="">
+                <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idlev2.gif" alt="">
             </div>
         </div>
+        <div id="border-between-canvas">aaa</div>
         <div id="shopCanvas">
-            <div id="attack" class="mt-3">
+            <div id="attack" class="">
                 <div class="shopBox bg-secondary rounded-3">
                     <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/attack.png" alt="">
+                        <img class="img-fluid custom-image-size" src="../../sources/images/Attackv2.png" alt="">
                     </div>
                     <div class="content-container-box">
                         <h6 class="text-light">attack</h6>
@@ -46,7 +47,7 @@
             <div id="attack-speed" class="mt-3">
                 <div class="shopBox bg-secondary rounded-3">
                     <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/attack-speed.png" alt="">
+                        <img class="img-fluid custom-image-size" src="../../sources/images/ASv2.png" alt="">
                     </div>
                     <div class="content-container-box">
                         <h6 class="text-light">attack speed</h6>
@@ -62,7 +63,7 @@
             <div id="critical-damage" class="mt-3">
                 <div class="shopBox bg-secondary rounded-3">
                     <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/critical-damage.png" alt="">
+                        <img class="img-fluid custom-image-size" src="../../sources/images/CDv2.png" alt="">
                     </div>
                     <div class="content-container-box">
                         <h6 class="text-light">critical damage</h6>
@@ -78,7 +79,7 @@
             <div id="critical-chance" class="mt-3">
                 <div class="shopBox bg-secondary rounded-3">
                     <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/critical-chance.png" alt="">
+                        <img class="img-fluid custom-image-size" src="../../sources/images/CCv2.png" alt="">
                     </div>
                     <div class="content-container-box">
                         <h6 class="text-light">critical chance</h6>
