berusaha memperbaiki monster

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -14,81 +14,87 @@
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../js/gameplay.js"></script>
     <title>Idle Clicker Cendol Barney</title>
+
 </head>
 
 <body>
     <div class="container-fluid">
-        <div id="gamePlay">
-            <div id="profile">
-                <h1 id="money" class="text-center text-light">0</h1>
-            </div>
-            <div id="monster">
-                <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idlev2.gif" alt="">
-            </div>
-        </div>
-        <div id="border-between-canvas">aaa</div>
-        <div id="shopCanvas">
-            <div id="attack" class="">
-                <div class="shopBox bg-secondary rounded-3">
-                    <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/Attackv2.png" alt="">
-                    </div>
-                    <div class="content-container-box">
-                        <h6 class="text-light">attack</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <h6 id="AttackText" class="text-light">Level: 0</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <button id="AttackButton" onclick="UpgradeAttack()">10</button>
-                    </div>
+        <div id="layout">
+            <div id="gamePlay">
+
+                <div id="profile">
+                    <h1 id="money" class="text-center text-light">0</h1>
+                </div>
+
+                <div id="monster" class="text-center">
+                    <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idlev2.gif" alt="">
                 </div>
             </div>
-            <div id="attack-speed" class="mt-3">
-                <div class="shopBox bg-secondary rounded-3">
-                    <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/ASv2.png" alt="">
-                    </div>
-                    <div class="content-container-box">
-                        <h6 class="text-light">attack speed</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <h6 id="ASText" class="text-light">Level: 0</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <button id="ASButton" onclick="UpgradeAS()">10</button>
-                    </div>
-                </div>
-            </div>
-            <div id="critical-damage" class="mt-3">
-                <div class="shopBox bg-secondary rounded-3">
-                    <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/CDv2.png" alt="">
-                    </div>
-                    <div class="content-container-box">
-                        <h6 class="text-light">critical damage</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <h6 id="CDText" class="text-light">Level: 0</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <button id="CDButton" onclick="UpgradeCD()">10</button>
+            <div id="border-between-canvas" class="bg-dark"></div>
+            <div id="shopCanvas" class="row bg-primary">
+                <div id="attack" class="col-12 col-md-3 p-2">
+                    <div class="shopBox bg-secondary rounded-3">
+                        <div class="content-container-box">
+                            <img class="img-fluid custom-image-size" src="../../sources/images/Attackv2.png" alt="">
+                        </div>
+                        <div class="content-container-box">
+                            <h6 class="text-light custom-button-font">attack</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <h6 id="AttackText" class="text-light custom-button-font">Level: 0</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <button id="AttackButton" class="custom-button-size" onclick="UpgradeAttack()">10</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="critical-chance" class="mt-3">
-                <div class="shopBox bg-secondary rounded-3">
-                    <div class="content-container-box">
-                        <img class="img-fluid custom-image-size" src="../../sources/images/CCv2.png" alt="">
+                <div id="attack-speed" class="col-12 col-md-3 p-2">
+                    <div class="shopBox bg-secondary rounded-3">
+                        <div class="content-container-box">
+                            <img class="img-fluid custom-image-size" src="../../sources/images/ASv2.png" alt="">
+                        </div>
+                        <div class="content-container-box">
+                            <h6 class="text-light custom-button-font">attack speed</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <h6 id="ASText" class="text-light custom-button-font">Level: 0</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <button id="ASButton" class="custom-button-size" onclick="UpgradeAS()">10</button>
+                        </div>
                     </div>
-                    <div class="content-container-box">
-                        <h6 class="text-light">critical chance</h6>
+                </div>
+                <div id="critical-damage" class="col-12 col-md-3 p-2">
+                    <div class="shopBox bg-secondary rounded-3">
+                        <div class="content-container-box">
+                            <img class="img-fluid custom-image-size" src="../../sources/images/CDv2.png" alt="">
+                        </div>
+                        <div class="content-container-box">
+                            <h6 class="text-light custom-button-font">critical damage</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <h6 id="CDText" class="text-light custom-button-font">Level: 0</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <button id="CDButton" class="custom-button-size" onclick="UpgradeCD()">MAX
+                                Level</button>
+                        </div>
                     </div>
-                    <div class="content-container-box">
-                        <h6 id="CCText" class="text-light">Level: 0</h6>
-                    </div>
-                    <div class="content-container-box">
-                        <button id="CCButton" onclick="UpgradeCC()">10</button>
+                </div>
+                <div id="critical-chance" class="col-12 col-md-3 p-2">
+                    <div class="shopBox bg-secondary rounded-3">
+                        <div class="content-container-box">
+                            <img class="img-fluid custom-image-size" src="../../sources/images/CCv2.png" alt="">
+                        </div>
+                        <div class="content-container-box">
+                            <h6 class="text-light custom-button-font">critical chance</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <h6 id="CCText" class="text-light custom-button-font">Level: 0</h6>
+                        </div>
+                        <div class="content-container-box">
+                            <button id="CCButton" class="custom-button-size" onclick="UpgradeCC()">10</button>
+                        </div>
                     </div>
                 </div>
             </div>
