--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -23,6 +23,7 @@
             <div id="gamePlay">
 
                 <div id="profile">
+                    <img src="../../sources/images/diamondsv2.png" alt="">
                     <h1 id="money" class="text-center text-light">0</h1>
                 </div>
 
@@ -31,7 +32,7 @@
                 </div>
             </div>
             <div id="border-between-canvas" class="bg-dark"></div>
-            <div id="shopCanvas" class="row bg-primary">
+            <div id="shopCanvas" class="row bg-dark">
                 <div id="attack" class="col-12 col-md-3 p-2">
                     <div class="shopBox bg-secondary rounded-3">
                         <div class="content-container-box">
@@ -76,8 +77,7 @@
                             <h6 id="CDText" class="text-light custom-button-font">Level: 0</h6>
                         </div>
                         <div class="content-container-box">
-                            <button id="CDButton" class="custom-button-size" onclick="UpgradeCD()">MAX
-                                Level</button>
+                            <button id="CDButton" class="custom-button-size" onclick="UpgradeCD()">10</button>
                         </div>
                     </div>
                 </div>
