benerin bug button, tambahin notif no money dan upgrade untuk attack

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -27,6 +27,10 @@
                     <h1 id="money" class="text-center text-light">0</h1>
                 </div>
 
+                <div id="sign">
+                    <h6 class="text-white text-center"></h6>
+                </div>
+
                 <div id="monster" class="text-center">
                     <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idlev2.gif" alt="">
                 </div>
