popup main menu dari lobby

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -37,6 +37,13 @@
                     <img onclick="Hit()" class="img-fluid" src="../../sources/gif/monster-idlev2.gif" alt="">
                 </div>
             </div>
+            <div id="popupExit" class="window">
+                <div id="popupExitContent" class="windowContent">
+                    <p>Progress will be lost. Are you sure?</p>
+                </div>
+                <button onclick="closeExit()" class="windowBtn">Cancel</button>
+                <button onclick="btnExit()" class="windowBtn">Proceed</button>
+            </div>
             <div id="border-between-canvas" class="bg-dark"></div>
             <div id="shopCanvas" class="row bg-dark">
                 <div id="attack" class="col-12 col-sm-6 col-md-3 p-2">
