benerin beberapa responsive dan tambahin button

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -22,9 +22,10 @@
         <div id="layout">
             <div id="gamePlay">
                 <div>
-                    <button id="menuButton" onclick="MainMenu()">Menu</button>
+                    <button id="menuButton" onclick="MainMenu()">
+                        <img id="gear" src="/sources/images/gear.png" alt="">
+                    </button>
                 </div>
-
                 <div id="profile">
                     <img src="../../sources/images/diamondsv2.png" alt="">
                     <h1 id="money" class="text-center text-light">0</h1>
