--- a/pages/html/main-menu.html
+++ b/pages/html/main-menu.html
@@ -27,9 +27,6 @@
                     class="custom-button custom-start-button-font main-menu-font-color">START</button>
             </div>
             <div class="d-flex justify-content-center mt-3">
-                <button onclick="OpenLoadGame()" class="custom-button main-menu-font-color">LOAD</button>
-            </div>
-            <div class="d-flex justify-content-center mt-3">
                 <button onclick="OpenCredits()" class="custom-button main-menu-font-color">CREDITS</button>
             </div>
         </div>
@@ -39,7 +36,7 @@
             <div class="popupContent">
                 <label class="d-flex justify-content-center m-3" for="name">Name:</label>
 
-                <input id="inputName" class="d-flex justify-content-center" name="name" type="text" required>
+                <input id="inputName" class="d-flex justify-content-center" name="name" type="text">
 
                 <button id="start-button" class="m-3" onclick="startBtn()">Start</button>
             </div>
