tahap finishing, tinggal benerin mainmenu background

--- a/pages/html/gameplay.html
+++ b/pages/html/gameplay.html
@@ -22,8 +22,8 @@
         <div id="layout">
             <div id="gamePlay">
                 <div>
-                    <button id="menuButton" onclick="MainMenu()">
-                        <img id="gear" src="/sources/images/gear.png" alt="">
+                    <button id="menuButton" class="gameplay-button btn" onclick="MainMenu()">
+                        <img id="gear" src="/sources/images/gear_white.png" alt="">
                     </button>
                 </div>
                 <div id="profile">
@@ -43,8 +43,8 @@
                     <p class="text-center m-3">Progress will be lost. Are you sure?</p>
                 </div>
                 <div id="exit-button">
-                    <button onclick="closeExit()" class="windowBtn">Cancel</button>
-                    <button onclick="btnExit()" class="windowBtn">Proceed</button>
+                    <button onclick="closeExit()" class="gameplay-button windowBtn">Cancel</button>
+                    <button onclick="btnExit()" class="gameplay-button windowBtn">Proceed</button>
                 </div>
             </div>
             <div id="border-between-canvas" class="bg-dark"></div>
