--- a/pages/html/main-menu.html
+++ b/pages/html/main-menu.html
@@ -18,9 +18,6 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row custom-title">
-            <h1 class="text-center custom-title-font main-menu-font-color">IDLE CLICKER</h1>
-        </div>
         <div class="row custom-button-margin">
             <div class="d-flex justify-content-center">
                 <button onclick="OpenNewGame()"
@@ -48,9 +45,18 @@
                 <h2 class="m-3">Credits</h2>
                 <p>UMN Gotcha by Cendol Barney</p>
                 <p>Jonathan Adi Purwoko / 00000071230</p>
-                <p>Russel Shivah Budiarto / 00000070376</p>
-                <p>Felix Mario Walewangko / 00000070498</p>
-                <p>Michael Tio / 00000070515</p>
+                <img class="foto-square" src="/sources/images/jap.jpg" alt="">
+                <p class="mt-3">Russel Shivah Budiarto / 00000070376</p>
+                <img class="foto-square" src="/sources/images/russel.jpg" alt="">
+                <p class="mt-3">Felix Mario Walewangko / 00000070498</p>
+                <img class="foto-square" src="/sources/images/felix.jpg" alt="">
+                <p class="mt-3">Michael Tio / 00000070515</p>
+                <img class="foto-square" src="/sources/images/tio.jpg" alt="">
+
+                <p class="mt-3">References</p>
+                <p>Game Concept Inspired by: Tap Titans 2</p>
+                <p>Music: From Past to Present - The Elder Scrolls V: Skyrim Original Soundtrack</p>
+                <p>Sound Effect: The Elder Scrolls V: Skyrim | Skill Learned [Sound Effect]</p>
             </div>
         </div>
     </div>
