--- a/pages/html/main-menu.html
+++ b/pages/html/main-menu.html
@@ -21,10 +21,10 @@
         <div class="row custom-button-margin">
             <div class="d-flex justify-content-center">
                 <button onclick="OpenNewGame()"
-                    class="custom-button custom-start-button-font main-menu-font-color">START</button>
+                    class="btn custom-button custom-start-button-font main-menu-font-color">START</button>
             </div>
             <div class="d-flex justify-content-center mt-3">
-                <button onclick="OpenCredits()" class="custom-button main-menu-font-color">CREDITS</button>
+                <button onclick="OpenCredits()" class="btn custom-button main-menu-font-color">CREDITS</button>
             </div>
         </div>
 
@@ -54,9 +54,13 @@
                 <img class="foto-square" src="/sources/images/tio.jpg" alt="">
 
                 <p class="mt-3">References</p>
-                <p>Game Concept Inspired by: Tap Titans 2</p>
-                <p>Music: From Past to Present - The Elder Scrolls V: Skyrim Original Soundtrack</p>
-                <p>Sound Effect: The Elder Scrolls V: Skyrim | Skill Learned [Sound Effect]</p>
+                <p>Game Concept Inspired by</p>
+                <p>Tap Titans 2</p>
+                <p>Music:</p>
+                <p>From Past to Present - The Elder Scrolls V: Skyrim Original Soundtrack</p>
+                <p>Sound Effect</p>
+                <p>The Elder Scrolls V: Skyrim | Skill Learned [Sound Effect]</p>
+                <p>The Elder Scrolls V: Skyrim | Critical Hit [Sound Effect]</p>
             </div>
         </div>
     </div>
